More FAQ, final touches before launch.

--- a/src/Dorothy/Views/Home/Login.cshtml
+++ b/src/Dorothy/Views/Home/Login.cshtml
@@ -15,11 +15,11 @@
         </p>
 
         <p>
-            <b>Ohne Passwort kommst du hier aber nicht weiter</b>
+            <b>Ohne Passwort kommst du aber nicht weiter</b>
         </p>
 
         <p>
-            Als geladener Gast findest du das Passwort auf der Einladung. Solltest du Probleme haben, dann kontaktiere bitte Christina oder Hannes.
+            Du findest das Passwort auf deiner Einladung. Solltest du Probleme haben, dann kontaktiere bitte Christina oder Hannes.
         </p>
         <form method="POST">
             @Html.ValidationSummary()
