--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -11,7 +11,7 @@
         </p>
         <p>
             Noch wissen wir nicht genau, wie wir das möglichst einfach und bequem für alle machen werden.
-            Aber zum Glück ist es ja noch ewig bis zum großen Dank, bis dahin wird uns sicher etwas einfallen.
+            Aber zum Glück ist es ja noch ewig bis zum großen Tag, bis dahin wird uns sicher etwas einfallen.
 
         </p>
     </div>
