--- a/src/Dorothy/Views/Rsvp/Index.cshtml
+++ b/src/Dorothy/Views/Rsvp/Index.cshtml
@@ -35,7 +35,7 @@
         </p>
 
         <p>
-            <b>Deine Partnerin oder dein Partner ist natürlich ebenso herzlich eingeladen, ebenso deine Kinder!</b>
+            <b>Deine Partnerin oder dein Partner ist natürlich herzlich eingeladen, ebenso deine Kinder!</b>
         </p>
 
         <p>
