--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a asp-controller="Guests" asp-action="Index">Gäste verwalten</a></li>
                                     <li><a asp-controller="RsvpAdmin" asp-action="Index">An-/Abmeldungen einsehen</a></li>
-                                    <li><a asp-controller="Home" asp-action="Logout">Ausloggen</a></li>
+                                    <li><a asp-controller="Home" asp-action="Logoff">Ausloggen</a></li>
                                 </ul>
                             </li>
                         }
