--- a/src/Dorothy/Views/User/Agenda.cshtml
+++ b/src/Dorothy/Views/User/Agenda.cshtml
@@ -7,13 +7,13 @@
         @if (User.IsInRole("Insider") || User.IsInRole("Admin"))
         {
             <p>
-                Wir freuen uns, wenn du mit uns sowohl unsere standesamtliche Trauung im kleinen feierst, als auch direkt im Anschluss das große Hochzeitsfest in Treffling.
+                Wir freuen uns, wenn du mit uns sowohl unsere standesamtliche Trauung im kleinen Kreis in der Landesgalerie feierst, als auch direkt im Anschluss das große Hochzeitsfest in Mittertreffling.
             </p>
         }
         else
         {
             <p>
-                Wir freuen uns sehr, wenn du mit uns unser Hochzeitsfest in Treffling feierst.
+                Wir freuen uns sehr, wenn du mit uns unser Hochzeitsfest im Kulturstadl in Mittertreffling feierst.
                 Direkt vorher findet in Linz die standesamtliche Trauung im kleinen Kreis statt - wir treffen also direkt frischvermählt am Fest ein.
             </p>
         }
@@ -26,7 +26,7 @@
                     <td>Treffen in der Landesgalerie</td>
                 </tr>
                 <tr>
-                    <th>Vierzen Uhr Dreißig</th>
+                    <th>Vierzehn Uhr Dreißig</th>
                     <td>Standesamtliche Trauung</td>
                 </tr>
                 <tr>
@@ -41,7 +41,7 @@
 
             <tr>
                 <th>Sechzehn Uhr</th>
-                <td>Empfang beim Kulturstadl Reckeneder</td>
+                <td>Eintreffen des Brautpaars und Empfang beim Kulturstadl Reckeneder</td>
             </tr>
 
             <tr>
