--- a/src/Dorothy/Views/User/Faq.cshtml
+++ b/src/Dorothy/Views/User/Faq.cshtml
@@ -12,49 +12,135 @@
 
 <div class="row">
     <div class="col-md-6">
+        <h3>Habt ihr euch das auch gut überlegt?</h3>
+        <p>
+            Nein. Es war ein spontaner Einfall von Hannes nach einem Gläschen zuviel, Christina hat die Frage nicht richtig verstanden und einfach "Ja" gesagt.
+            Jetzt machen wir halt das beste draus.
+        </p>
+    </div>
+    <div class="col-md-6">
+        <h3>Findet Christina keinen Besseren?</h3>
+        <p>
+            Klar, das würde sie schon. Aber Hannes ist jetzt schon da, und das ist dann doch auch sehr bequem.
+        </p>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-md-6">
         <h3>Darf ich meine Kinder mitbringen?</h3>
-        Ja, unbedingt! Wir werden uns etwas überlegen, damit ihnen nicht zu schnell langweilig wird.
+        <p>
+            Ja, unbedingt! Wir werden uns etwas überlegen, damit ihnen nicht zu schnell langweilig wird.
+        </p>
     </div>
     <div class="col-md-6">
         <h3>Ist Krawatte schon over-dressed?</h3>
-        Gut möglich. Es gibt keinen Dress-Code, du kannst auch in Jeans kommen, wenn du gerne magst.
-        Hauptsache, du hast es gemütlich und kannst ordentlich mit uns feiern.
+        <p>
+            Gut möglich. Es gibt keinen Dress-Code, du kannst auch in Jeans kommen, wenn du gerne magst.
+            Hauptsache, du hast es gemütlich und kannst ordentlich mit uns feiern.
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h3>Was gibt es zu essen?</h3>
+        <p>
+            Für den Hunger gibt es <a asp-action="Agenda">rechtzeitig</a> ein kaltes Buffet mit bodenständigen Leckereien vom Wirt aus der Umgebung.
+        </p>
+        <p>
+            Wir achten natürlich - nicht ganz uneigennützig - auf genügend fleischlose Kost.
+            Bitte gib uns Bescheid, wenn du irgendwelche besonderen Vorlieben oder Allergien hast, dann können wir das in der Zusammenstellung des Buffets gleich berücksichtigen.
+        </p>
+    </div>
+    <div class="col-md-6">
+        <h3>Besteht die Gefahr des Verdurstens?</h3>
+        <p>
+            Nur wenn du vergisst, regelmäßig Nachschub zu bestellen oder beim Tanzen dehydrierst.
+            Du kannst jedenfalls dein Porte­mon­naie zu Hause lassen, es ist für alles gesorgt.
+        </p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-6">
         <h3>Kann man dort übernachten?</h3>
-        Ja. Es gibt in gemütlicher Gehweite ein <a href="http://www.kreuzwirt.cc/kreuzwirt/index.php?lang=de&page=home">günstiges, kleines Landhotel</a> mit genügend Zimmern.
-        Bitte kontaktiere uns, wenn du Interesse hast, wir können gerne für dich reservieren.
-        Die Kosten musst du allerdings selbst tragen, sie betragen ca. 80 Euro pro Doppelzimmer inkl. Frühstück.
+        <p>
+            Ja. Es gibt in gemütlicher Gehweite ein <a href="http://www.kreuzwirt.cc/kreuzwirt/index.php?lang=de&page=home">günstiges, kleines Landhotel</a> mit genügend Zimmern.
+        </p>
+        <p>
+            Bitte kontaktiere uns ehestmöglich, wenn du Interesse hast, wir können dann gerne für dich reservieren.
+            Die Kosten musst du allerdings selbst tragen, sie betragen ca. 80 Euro pro Doppelzimmer inkl. Frühstück.
+        </p>
     </div>
     <div class="col-md-6">
-        <h3></h3>
+        <h3>Was <s>muss</s> darf ich euch schenken?</h3>
+        <p>
+            Wir heiraten nicht wegen der Geschenke, das wäre nämlich eine ziemlich schlechte Investition.
+        </p>
+        <p>
+            Wenn du uns etwas schenken möchtest, freuen wir uns besonders über ein Geldgeschenk.
+            Wir haben nämlich bemerkt, dass es gar nicht so günstig ist, ein gemeinsames Leben aufzubauen. Und wir befürchten, dass diesbezüglich in den nächsten Jahren noch einiges auf uns zukommen wird.
+        </p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-6">
         <h3>Muss ich tanzen können?</h3>
-        Fürs Leben? Nö. Für unsere Hochzeit - vielleicht: Es gibt keine Live-Musik. Der DJ wird die Musik eher spontan an die Stimmung anpassen,
-        er hat aber strikte Anweisung (unter Pönale), auf keinen Fall Helene Fischer, Gabalier oder ähnliches aufzulegen.
+        <p>
+            Fürs Leben? Nö, wir können es nämlich auch nicht, und sind bisher ganz gut ohne gefahren.
+        </p>
+        <p>
+            Für unsere Hochzeit - vielleicht: Es gibt keine Live-Musik. Der DJ wird die Musik eher spontan an die Stimmung anpassen,
+            er hat aber strikte Anweisung (unter Pönale), auf keinen Fall Fischer, Gabalier oder ähnliches aufzulegen.
+        </p>
     </div>
     <div class="col-md-6">
-        <h3>Muss ich eh nicht verdursten?</h3>
-        Nur wenn du vergisst, regelmäßig Nachschub zu bestellen oder von der Bar zu holen.
-        Du kannst jedenfalls dein Porte­mon­naie zu Hause lassen.<br /><br />
-        Für den Hunger gibt es übrigens ein bodenständiges, kaltes Buffet, sowohl für Fleischesser als auch für Vegetarier.
+        <h3>Wie komme ich am besten nach Mittertreffling?</h3>
+        <p>
+            Du kannst gerne mit dem Auto kommen, es gibt beim Kulturstadl genügend Parkplätze.
+            Idealerweise kombinierst du dass dann gleich mit einer Übernachtung vor Ort, damit du möglichst lange mit uns feiern kannst.
+        </p>
+        <p>
+            Mittertreffling ist aber auch nur ca. 10 km vom Linzer Hauptplatz entfernt, du kannst also auch ein Taxi nehmen.
+            Die beiden großen Linzer Taxiunternehmen sind unter <a href="http://www.taxi6969.at/">+43 732 6969</a> oder <a href="http://www.taxi2244.at/">+43 732 2244</a> erreichbar.
+        </p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-6">
         <h3>Sind die Brautjungfern noch zu haben?</h3>
-        Wir haben uns bei ihnen erkundigt. Die einhellige Antwort war: "Kommt drauf an, wer fragt".
+        <p>
+            Wir haben uns vorsichtig bei ihnen erkundigt. Die einhellige Antwort war: "Kommt drauf an, wer fragt".
+        </p>
     </div>
     <div class="col-md-6">
-        <h3></h3>
+        <h3>Wie ist der Stand der Vorbereitungen?</h3>
+        <p>
+            Katastrophal. Trotz Einsatz professioneller Projekt-Software und strikte Einhaltung von ISO-9001 werden alle Meilensteine laufend verschoben.
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <h3>Wie wird das Wetter am 3. September 2016 in Mittertreffling?</h3>
+        <p>
+            Wir sind uns irgendwie noch nicht so ganz sicher. Im Prinzip ist es aber auch egal, denn der Kulturstadl funktioniert sowohl bei gutem, als auch bei schlechtem Wetter.
+            Ein bisschen Regen wird also niemandem die Stimmung vermiesen.
+        </p>
+    </div>
+    <div class="col-md-6">
+        <h3>Ist Christina schwanger?</h3>
+        <p>
+            Nein. Und überhaupt, das mit der Schwangerschaft haben wir irgendwie vor Jahren schon übersehen.
+        </p>
+        <p>
+            Hannes ist übrigens auch nicht schwanger, auch wenn es auf den ersten Blick so aussieht.
+        </p>
     </div>
 </div>
 
