--- a/src/Dorothy/wwwroot/css/pages/home.scss
+++ b/src/Dorothy/wwwroot/css/pages/home.scss
@@ -5,11 +5,15 @@
     }
 
     .date-box {
-        font-size: 22px;
+        font-size: 30px;
         text-align: center;
 
+        @media (min-width: 992px) {
+            padding-bottom: 12px;
+        }
+
         img {
-            height: 100px;
+            height: 120px;
             margin: 20px auto 0 auto;
         }
 
