--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -11,16 +11,17 @@ body {
 }
 
 a, a:hover {
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-style: dotted;
     color: black;
 
     &:hover {
         text-decoration: underline;
-        text-decoration-style: dotted;
+        text-decoration-style: solid;
     }
 }
 
-a.btn:hover {
+a.btn, a.btn:hover, .nav a {
     text-decoration: none;
 }
 
@@ -121,7 +122,7 @@ button {
 
 
 .navbar {
-    margin:  0 0 20px 0;
+    margin: 0 0 20px 0;
     padding: 0 -15px;
 
     a, a:hover, a:visited, a:active {
