--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -24,7 +26,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.min.css" asp-file-version="true" />
+    <link rel="stylesheet" href="~/css/site.min.css" asp-file-version="true"/>
+
+    @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body class="@ViewBag.BodyCssClass">
     @if (User.Identity.IsAuthenticated)
