Migrated to ASP.NET Core RC2

--- a/src/Dorothy/Views/_ViewImports.cshtml
+++ b/src/Dorothy/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using Dorothy
-@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+﻿@using Haufwerk
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
