Upgrade to ASP.NET Core 1.0 RTM.

--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -176,3 +176,8 @@ button {
         }
     }
 }
+
+@import "pages/home.scss";
+@import "pages/login.scss";
+@import "pages/rsvp.scss";
+@import "pages/save-the-date.scss";
