--- a/src/Dorothy/wwwroot/css/site.scss
+++ b/src/Dorothy/wwwroot/css/site.scss
@@ -180,4 +180,5 @@ button {
 @import "pages/home.scss";
 @import "pages/login.scss";
 @import "pages/rsvp.scss";
+@import "pages/photos.scss";
 @import "pages/save-the-date.scss";
