--- a/src/Dorothy/Views/User/Faq.cshtml
+++ b/src/Dorothy/Views/User/Faq.cshtml
@@ -75,7 +75,9 @@
         </p>
     </div>
     <div class="col-md-6">
+        @* ReSharper disable Html.Obsolete *@
         <h3>Was <s>muss</s> darf ich euch schenken?</h3>
+        @* ReSharper restore Html.Obsolete *@
         <p>
             Wir heiraten nicht wegen der Geschenke, das wäre nämlich eine ziemlich schlechte Investition.
         </p>
