--- a/src/Dorothy/Views/User/Route.cshtml
+++ b/src/Dorothy/Views/User/Route.cshtml
@@ -48,6 +48,7 @@
         </p>
     </div>
     <div class="col-md-6">
+        @* ReSharper disable Html.Obsolete *@
         @if (!User.IsInRole("User"))
         {
             <p>
@@ -58,5 +59,6 @@
         <p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1321.7813451176053!2d14.380132257660408!3d48.33477856978764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4773a2f48360f503%3A0xca5e81963d5f1c01!2sMittertreffling+8%2C+4209+Mittertreffling!5e0!3m2!1sen!2sat!4v1451919127267" width="100%" height="500" frameborder="0" style="border: 0" allowfullscreen></iframe>
         </p>
+        @* ReSharper restore Html.Obsolete *@
     </div>
 </div>
