--- a/src/Dorothy/Views/Shared/_Layout.cshtml
+++ b/src/Dorothy/Views/Shared/_Layout.cshtml
@@ -85,16 +85,20 @@
 
     @RenderSection("scripts", required: false)
 
+ 
     <script>
+// ReSharper disable UnusedParameter
         (function (i, s, o, g, r, a, m) {
+// ReSharper restore UnusedParameter
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
+                (i[r].q = i[r].q || []).push(arguments);
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m);
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-3250157-11', 'auto');
         ga('send', 'pageview');
     </script>
+
 </body>
 </html>
