Add first few photo galleries.

--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -11,74 +11,38 @@
         </h2>
 
         <p>
-            Wir würden gerne alle Fotos und Videos sammeln, die während unserer Hochzeit anfallen.
-        </p>
-        <p>
-            Heutzutage hat ja bekanntlich jede(r) eine Top-Kamera in der Tasche.
-            Manche verwenden diese Apparaturen namens Smartphones zusätzlich auch zum Telefonieren, aber das ist eher selten.
-            Hauptsächlich werden sie zum Fotografieren und dem <a href="http://www.pokemongo.com/">Einfangen unschuldiger Wildtiere</a> benutzt, die dann wie in Hahnenkämpfen aufeinander gehetzt werden.
-        </p>
-        <p>
-            Wir würden uns freuen, wenn alle unschätzbaren visuellen Zeitdokumente, die während der Hochzeit gemacht werden, auch als Erinnerungsstück bei uns laden.
-            Wir sammeln alle Fotos und Videos an dieser Stelle gesammelt und stellen sie auch allen anderen interessierten Gästen zur Verfügung.
-        </p>
-        <p>
-            Es gibt zwei Möglichkeiten, wie du uns die von dir gemachten Fotos zukommen lassen kannst:
+            Wir bemühen uns, alle Fotos unserer Hochzeit zu sammeln und hier zu veröffentlichen.
+            Wenn du selbst Fotos gemacht hast, bitte sei so gut und <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w">teile sie mit uns</a>.
         </p>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6">
-        <img src="~/img/Fotoschachtel.png" class="logo" />
-        <h3>Fotoschachtel</h3>
-        <p>
-            Ja, Hannes hat tatsächlich eine eigene App für seine Hochzeit programmiert. Das war viel, viel mehr Arbeit als gedacht, aber die App namens Fotoschachtel ist mittlerweile live.
-            Sie ist zwar höchstwahrscheinlich nicht die beste App aller Zeiten, aber man kann dort sehr einfach Fotos zu einzelnen Events sammeln und mit allen anderen Gästen teilen
-        </p>
-
-        <p>
-            <div class="row">
-                <div class="col-xs-6 appstore">
-                    <a href="https://itunes.apple.com/at/app/fotoschachtel/id1114136776" title="Lade Fotoschachtel für iOS herunter">
-                        <img src="~/img/appstore.svg" />
-                    </a>
-                </div>
-                <div class="col-xs-6 appstore">
-                    <a href="https://play.google.com/store/apps/details?id=com.sachsenhofer.fotoschachtel" title="Lade Fotoschachtel für Android herunter">
-                        <img src="~/img/googleplay.png" />
-                    </a>
-                </div>
+    <div class="col-sm-4">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh8VRZGRkPE9d9DmOog" target="_blank">
+            <div class="round">
+                <img src="~/img/gallery_paarfotos.png" />
             </div>
-        </p>
-
-        <p>
-            In der App gibst du als den Namen des Events einfach <code>Hochzeit</code> an, das dazugehörige Passwort ist <code>oskar</code>.
-            Oder du scannst direkt über die App den folgenden QR-Code:
-        </p>
-        <p class="qr">
-            <a href="https://fotoschachtel.sachsenhofer.com/event/Hochzeit%3AA6EIIIfk50XMDjpnS1vVZ2R9JqRHkVVLVAzy5Y2H694">
-                <img src="~/img/fotoschachtel_qr.png" />
-            </a>
-        </p>
+            <br />
+            Paare
+        </a>
     </div>
-
-    <div class="col-md-6">
-        <img src="~/img/OneDrive.png" class="logo" />
-        <h3>OneDrive</h3>
-        <p>
-            Die Alternative zu Fotoschachtel ist OneDrive. Dafür gibt es eine angenehme App für alle Plattformen und mehr Speicherplatz als jemals aufgebraucht werden kann.
-            Du kannst deine Fotos auf dieses Verzeichnis auf OneDrive hochladen:
-        </p>
-        <p class="onedrive">
-            <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w">Hochzeitsfotos @@ OneDrive</a>
-        </p>
+    <div class="col-sm-4">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh8VSCc5fvYLkwcKnFA" target="_blank">
+            <div class="round">
+                <img src="~/img/gallery_fotoschachtel.png" />
+            </div>
+            <br />
+            Schnappschüsse aus der Fotoschachtel
+        </a>
     </div>
-</div>
-
-<div class="row">
-    <div class="col-xs-12">
-        Übrigens: Wenn du Fotos auf Facebook, Twitter oä. veröffentlichen möchtest, frage bitte alle abgebildeten Personen, ob die auch damit einverstanden sind.
-        Aber das hat jetzt nichts direkt mit unserer Hochzeit zu tun, sondern ist natürlich generell selbstverständlich :)
+    <div class="col-sm-4">
+        <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w" target="_blank">
+            <div class="round">
+                <img src="~/img/OneDrive.png" />
+            </div>
+            <br />
+            Alle Fotos
+        </a>
     </div>
 </div>
