Add new galleries.

--- a/src/Dorothy/Views/Photos/Index.cshtml
+++ b/src/Dorothy/Views/Photos/Index.cshtml
@@ -18,25 +18,45 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <a href="https://1drv.ms/a/s!AitANheAUPSOh8VRZGRkPE9d9DmOog" target="_blank">
             <div class="round">
                 <img src="~/img/gallery_paarfotos.png" />
             </div>
             <br />
-            Paare
+            Paare (168)
         </a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <a href="https://1drv.ms/a/s!AitANheAUPSOh8VSCc5fvYLkwcKnFA" target="_blank">
             <div class="round">
                 <img src="~/img/gallery_fotoschachtel.png" />
             </div>
             <br />
-            Schnappschüsse aus der Fotoschachtel
+            Schnappschüsse aus der Fotoschachtel (38)
         </a>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh8kDAOIBms7mnMSvjQ" target="_blank">
+            <div class="round">
+                <img src="~/img/gallery_christian.png" />
+            </div>
+            <br />
+            Christians Fotos (234)
+        </a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://1drv.ms/a/s!AitANheAUPSOh8kFzqKsa4sF6_heoQ" target="_blank">
+            <div class="round">
+                <img src="~/img/gallery_regi.png" />
+            </div>
+            <br />
+            Regis Fotos (27)
+        </a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-3">
         <a href="https://1drv.ms/f/s!AitANheAUPSOh8JlW6UpJdo1mqho4w" target="_blank">
             <div class="round">
                 <img src="~/img/OneDrive.png" />
